# psicash-lib-core

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  README.md  SecretTestValues.h.enc  base64.cpp  base64.h  base64.hpp  base64_test.cpp  build-docker.sh  build-windows.bat  build.gradle  build.sh  datastore.cpp  datastore.h  datastore.hpp  datastore_test.cpp  datetime.cpp  datetime.hpp  datetime_test.cpp  error.cpp  error.h  error.hpp  error_test.cpp  http_request.cpp  http_status_codes.h  psicash.cpp  psicash.h  psicash.hpp  psicash_test.cpp  psicash_tester.cpp  psicash_tester.h  psicash_tester.hpp  settings.gradle  test.sh  test_helpers.cpp  test_helpers.h  (+12 more)
.github/workflows/: build-windows.yml  test.yml
app/: build.gradle
app/src/androidTest/java/ca/psiphon/psicash/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/ca/psiphon/psicash/: MainActivity.java  PsiCashLibHelper.java
app/src/main/res/values/: strings.xml
app/src/test/java/ca/psiphon/psicash/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
psicashlib/: .gitignore  CMakeLists.txt  build.gradle
psicashlib/src/androidTest/java/ca/psiphon/psicashlib/: BalanceTest.java  ExampleInstrumentedTest.java  ExpirePurchasesTest.java  GetDiagnosticInfoTest.java  GetPurchasePricesTest.java  GetPurchasesTest.java  GetRewardedActivityDataTest.java  InitTest.java  IsAccountTest.java  ModifyLandingPageTest.java  NewExpiringPurchaseTest.java  NextExpiringPurchaseTest.java  PsiCashLibTester.java  RefreshStateTest.java  RemovePurchasesTest.java  SecretTestValues.java.enc  SetRequestMetadataItemTest.java  TestBase.java  ValidPurchasesTest.java  ValidTokenTypesTest.java
psicashlib/src/debug/: AndroidManifest.xml
psicashlib/src/main/: AndroidManifest.xml
psicashlib/src/main/cpp/: README.md  jniglue.cpp  jnihelpers.cpp  jnihelpers.h  jnihelpers.hpp  jnitest.cpp  jnitest.h  jnitest.hpp
psicashlib/src/main/cpp/psicashlib/: .clang-format  CMakeLists.txt  README.md  SecretTestValues.h.enc  base64.cpp  base64_test.cpp  datastore.cpp  datastore.h  datastore_test.cpp  datetime.cpp  datetime.h  datetime_test.cpp  error.cpp  error.h  error_test.cpp  http_request.cpp  http_request.h  http_status_codes.h  psicash.cpp  psicash.h  psicash_test.cpp  psicash_tester.cpp  psicash_tester.hpp  test.sh  test_helpers.cpp  test_helpers.h  url.cpp  url.h  url.hpp  url_test.cpp  userdata.cpp  userdata.h  userdata_test.cpp
psicashlib/src/main/java/ca/psiphon/psicashlib/: PsiCashLib.java
psicashlib/src/main/res/values/: strings.xml
psicashlib/src/test/java/ca/psiphon/psicashlib/: ExampleUnitTest.java
